# Quizzma

./: .gitignore  LICENSE  README.md
.github/workflows/: README.md  backend-deploy.yml  frontend-deploy.yml  frontend-lint.yml  prometheus-deploy.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml  run_application.py
backend/app/: dependencies.py  logger.py  main.py
backend/app/database/: backup-s3.sh  database.db  setup.py
backend/app/internal/: analysis.py  session.py  session_manager.py  ws_helpers.py
backend/app/routers/: audience.py  host.py  session.py  ws.py
backend/migrations/: env.py
backend/migrations/versions/: 1090f5fdff68_tie_topics_to_summary_and_sentiment_to_.py  1e9e0d2ec27e_remove_rating_model.py  53b12b24e09d_init.py  c20474f7440c_extend_topic_model.py  c4d88b0bd51b_add_sentiment_analysis_model.py  f2758dafdfd3_topic_modeling.py
backend/performance_tests/: README.md  api.js  test_join.js  test_multiple_answers.js
backend/processing/: definitions.py
backend/processing/formatting/: question_import.py
backend/processing/llm/: openai.py
backend/processing/preprocessing/: openai_language_processing.py  preprocessing.py  test.py
backend/processing/sentiment/: roberta.py  vader.py
backend/processing/summary/: openai_llm.py  openai_reasoning.py
backend/processing/topics/: bertopic.py  lda.py
frontend/: .env.example  .prettierignore  README.md  bun.lockb  eslint.config.js  index.html  package.json  prettierrc.json
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx
frontend/src/api/: README.md  (+1 more)
(+69 files in other folders)
