[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "bertopic>=0.16.4",
    "cachetools>=5.5.1",
    "fastapi[standard]>=0.115.7",
    "firebase-admin>=6.6.0",
    "greenlet>=3.1.1",
    "logtail-python>=0.3.2",
    "nltk>=3.9.1",
    "numpy==2.1.3",
    "openai>=1.60.1",
    "pandas>=2.2.3",
    "pyhumps>=3.8.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
dev = "fastapi dev run_application.py"
dev-bert = 'export USE_BERT=true && task dev'
prod = "export USE_BERT=true && dotenv run uvicorn run_application:app --host 0.0.0.0 --port $FASTAPI_PORT"
migrate = "alembic upgrade heads"
